# vibecodekit-mql5-ea

./: .dockerignore  .gitattributes  .gitignore  Dockerfile.devin  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
Include/: CAsyncTradeManager.mqh  CMagicRegistry.mqh  CMfeMaeLogger.mqh  COnnxLoader.mqh  CPipNormalizer.mqh  CRiskGuard.mqh  CSpreadGuard.mqh
docs/: COMMANDS.md  ENV-SETUP-vi.md  MIGRATE-VPS.md  PLAN-v5.md  QUICKSTART.md  USAGE-en.md  USAGE-vi.md  anti-patterns-AVOID.md  devin-chat-driven-build.md  phase-0-spec.md  phase-A-spec.md  phase-B-spec.md  phase-C-spec.md  phase-D-spec.md  phase-E-spec.md
docs/references/: 50-survey.md  51-platform-arch.md  52-multi-symbol.md  53-broker-modes.md  54-stl-cheatsheet.md  55-tester-stats.md  56-walkforward.md  57-monte-carlo.md  58-overfit.md  59-trader-checklist.md  60-wizard-cexpert.md  61-tester-metrics.md  62-mfe-mae.md  63-tester-config.md  64-fitness-templates.md  65-multi-broker.md  66-stdlib-trade-classes.md  67-indicator-dev-parallel.md  70-algo-forge.md  71-onnx-mql5.md  72-matrix-vector.md  73-cloud-network.md  74-vps.md  75-webrequest.md  76-llm-patterns.md  77-async-hft.md  78-opencl.md  79-pip-norm.md  80-input-syntax.md
docs/rri-personas/: broker-engineer.yaml  devops.yaml  perf-analyst.yaml  risk-auditor.yaml  strategy-architect.yaml  trader.yaml
docs/rri-templates/: step-1-scan.md.tmpl  step-2-rri.md.tmpl  step-3-vision.md.tmpl  step-4-blueprint.md.tmpl  step-5-tip.md.tmpl  step-6-build.md.tmpl  step-7-verify.md.tmpl  (+1 more)
scripts/: audit-plan-v5.py  setup-wine-metaeditor.sh
(+199 files in other folders)
